--- a/shop/templates/shop/includes/header.html
+++ b/shop/templates/shop/includes/header.html
@@ -118,7 +118,7 @@
             <p class="sidecart-total"><span class="strong">Цена:</span> {{cart_total}} ден</p>
             </div>
             <div class="sidecart-item sidecart-Button">
-                    <a href="{% url 'checkout' %}" class="button-link"><button class="proceed-to-checkout sidecartCheckout">НАРАЧАЈ ВЕДНАШ</button></a>
+                   <button class="proceed-to-checkout sidecartCheckout">НАРАЧАЈ ВЕДНАШ</button>
             </div>
         
         
