--- a/shop/static/shop/css/main.css
+++ b/shop/static/shop/css/main.css
@@ -537,6 +537,7 @@ input[type=number] {
     display:flex;
     align-items:center;
     justify-content:center;
+    width: 100%;
   }
   .options{
     width:100%;  
@@ -3326,7 +3327,7 @@ section#ordered_items_notice_wrapper {
     font-size: 16px!important;
 }
 
-media(max-width:768px){
+@media(max-width:768px){
     .checkout-fees-checkbox{
         padding: 8px;
     }
