--- a/shop/templates/shop/includes/footer.html
+++ b/shop/templates/shop/includes/footer.html
@@ -172,7 +172,7 @@
                     </div>
                     {% endfor %}
                 </div>
-                <p class="free-delivery-notice margin-bottom">Бесплатна достава доколку нарачате повеќе од 1 продукт</p>
+                <p class="free-delivery-notice margin-bottom">Бесплатна достава на сите продукти!</p>
                 <h4>Одберете начин на достава</h4>
                 <div class="delivery-methods margin-bottom">
                     <div class="method">
