--- a/shop/templates/shop/includes/footer.html
+++ b/shop/templates/shop/includes/footer.html
@@ -260,7 +260,9 @@
                                 <div class="checkout-fees-checkbox">
                                     <div class="checkout-checkmark"></div>
                                 </div>
-                                <img src="{% static 'icons/checkout/truck.svg' %}" alt="" width="24px" height="24px" style="filter: invert(59%) sepia(26%) saturate(4529%) hue-rotate(359deg) brightness(103%) contrast(104%);">
+                                {% if fee.emoji %}
+                                    <div style="display:flex;justify-content: center; align-items: center;"><span style="font-size:22px">{{fee.emoji}}</span></div>
+                                {% endif %}
                                 <p>Додади <span style="color:red;font-weight:700">{{ fee.title }}</span> за само <span style="font-weight:700; color:#ff8c01">{{ fee.price }} ден</span></p>
                                 
                             </div>
