--- a/shop/templates/shop/product-page.html
+++ b/shop/templates/shop/product-page.html
@@ -157,7 +157,7 @@
     <div class="toggle">
         <div class="toggle-item">
             <div class="toggle-title"><p>ДЕТАЛЕН ОПИС</p> <i class="fa-solid fa-angle-down toggle-icon"></i></div>
-            <div class="toggle-content main-toggle">
+            <div class="toggle-content main-toggle" style="text-align:initial!important">
                 <p>{{  product.content| safe }}</p>
             </div>
         </div>
