--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -51,6 +51,15 @@
     src="https://www.facebook.com/tr?id=201484344738499&ev=PageView&noscript=1"
     /></noscript>
     <!-- End Meta Pixel Code -->
+    <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
+    <script>
+      window.OneSignal = window.OneSignal || [];
+      OneSignal.push(function() {
+        OneSignal.init({
+          appId: "d511d8fa-ab75-4ab8-bb9f-65bcc93bfd3c",
+        });
+      });
+    </script>
     
 </head>
 <body>
