--- a/shop/templates/shop/product-page.html
+++ b/shop/templates/shop/product-page.html
@@ -174,11 +174,21 @@
             <button class="increment-btn">+</button>
         </div>
         {% if attributes %}
-        <button class="variable-add-to-cartBtn"><span class="btn-text">ВО КОШНИЧКА</span><span class="load-spinner open-spinner"></span></button>
-        <button class="proceed-to-checkout variable-add-to-cartBtn">НАРАЧАЈ ВЕДНАШ</button>
+                {% if upsells %}
+                        <button class="variable-add-to-cartBtn hasUpsells"><span class="btn-text">ВО КОШНИЧКА</span><span class="load-spinner open-spinner"></span></button>
+                        <button class="proceed-to-checkout variable-add-to-cartBtn hasUpsells">НАРАЧАЈ ВЕДНАШ</button>
+                {% else %}
+                        <button class="variable-add-to-cartBtn"><span class="btn-text">ВО КОШНИЧКА</span><span class="load-spinner open-spinner"></span></button>
+                        <button class="proceed-to-checkout variable-add-to-cartBtn">НАРАЧАЈ ВЕДНАШ</button>
+                {% endif %}
         {% else %}
-        <button class="add-to-cartBtn"><span class="btn-text">ВО КОШНИЧКА</span><span class="load-spinner open-spinner"></span></button>
-        <button class="proceed-to-checkout add-to-cartBtn">НАРАЧАЈ ВЕДНАШ</button>
+                {% if upsells %}
+                        <button class="add-to-cartBtn hasUpsells"><span class="btn-text">ВО КОШНИЧКА</span><span class="load-spinner open-spinner"></span></button>
+                        <button class="proceed-to-checkout add-to-cartBtn hasUpsells">НАРАЧАЈ ВЕДНАШ</button>
+                {% else %}
+                        <button class="add-to-cartBtn"><span class="btn-text">ВО КОШНИЧКА</span><span class="load-spinner open-spinner"></span></button>
+                        <button class="proceed-to-checkout add-to-cartBtn">НАРАЧАЈ ВЕДНАШ</button>
+                {% endif %}
         {% endif %}
     <div class="badges-wrapper">
         <div class="badge-item">
