--- a/shop/templates/shop/product-page.html
+++ b/shop/templates/shop/product-page.html
@@ -92,7 +92,9 @@
             <div class="product-upsell-checkbox checked">
                 <div class="checkmark"></div>
             </div>
+            {% if upsell.thumbnail %}
             <img src="{{ upsell.thumbnail.url }}" alt="" width="50px" height="50px" style="border-radius: 5px" class="product-upsell-image">
+            {% endif %}
             <div class="product-page-upsell-info">
                 <p style="font-weight:600">{{ upsell.title }}</p>
                 <p><span style="font-size:14px;font-weight:600;color: #ff8c01;">вклучен со продуктот</span></p>   
@@ -107,7 +109,9 @@
             <div class="product-upsell-checkbox">
                 <div class="checkmark"></div>
             </div>
+            {% if upsell.thumbnail %}
             <img src="{{ upsell.thumbnail.url }}" alt="" width="50px" height="50px" style="border-radius: 5px" class="product-upsell-image">
+            {% endif %}
             <div class="product-page-upsell-info">
                 <p style="font-weight:600">{{ upsell.title }}</p>
                 <p><span style="font-size:12px;font-weight:500;color:#808080;text-decoration: line-through;">{{ upsell.regular_price }} ден</span> <span style="font-size:14px;font-weight:600;color: #ff8c01;">{{ upsell.sale_price }} ден</span></p>    
